Final single post spacing issue fix

--- a/_assets/public/css/frontend/style.css
+++ b/_assets/public/css/frontend/style.css
@@ -2318,6 +2318,7 @@ a {
   cursor: pointer;
 }
 .spacer {
+  display: block;
   padding-bottom: 15px;
 }
 .custom-logo{
