--- a/_assets/src/css/frontend/_base.css
+++ b/_assets/src/css/frontend/_base.css
@@ -16,5 +16,6 @@ a {
 }
 
 .spacer {
+  display: block;
   padding-bottom: 15px;
 }
